# docs/devicemanager_swagger.json
@@ -777,23 +777,17 @@
                 }
             }
         },
-        "github_com_SENERGY-Platform_device-selection_pkg_model.ImportConfig": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "value": {}
-            }
-        },
         "github_com_SENERGY-Platform_device-selection_pkg_model.ImportType": {
             "type": "object",
             "properties": {
                 "configs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.ImportTypeConfig"
+                        "$ref": "#/definitions/models.ImportTypeConfig"
                     }
+                },
+                "cost": {
+                    "type": "integer"
                 },
                 "default_restart": {
                     "type": "boolean"
@@ -811,31 +805,12 @@
                     "type": "string"
                 },
                 "output": {
-                    "$ref": "#/definitions/model.ImportContentVariable"
+                    "$ref": "#/definitions/models.ImportContentVariable"
                 },
                 "owner": {
                     "type": "string"
                 }
             }
-        },
-        "github_com_SENERGY-Platform_device-selection_pkg_model.Type": {
-            "type": "string",
-            "enum": [
-                "https://schema.org/Text",
-                "https://schema.org/Integer",
-                "https://schema.org/Float",
-                "https://schema.org/Boolean",
-                "https://schema.org/ItemList",
-                "https://schema.org/StructuredValue"
-            ],
-            "x-enum-varnames": [
-                "String",
-                "Integer",
-                "Float",
-                "Boolean",
-                "List",
-                "Structure"
-            ]
         },
         "model.BulkRequestElement": {
             "type": "object",
@@ -953,7 +928,7 @@
                 "configs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_SENERGY-Platform_device-selection_pkg_model.ImportConfig"
+                        "$ref": "#/definitions/models.ImportConfig"
                     }
                 },
                 "id": {
@@ -973,57 +948,6 @@
                 },
                 "restart": {
                     "type": "boolean"
-                }
-            }
-        },
-        "model.ImportContentVariable": {
-            "type": "object",
-            "properties": {
-                "aspect_id": {
-                    "description": "deprecated: alias for a single element AspectIds",
-                    "type": "string"
-                },
-                "aspect_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "characteristic_id": {
-                    "type": "string"
-                },
-                "function_id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "sub_content_variables": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.ImportContentVariable"
-                    }
-                },
-                "type": {
-                    "$ref": "#/definitions/github_com_SENERGY-Platform_device-selection_pkg_model.Type"
-                },
-                "use_as_tag": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "model.ImportTypeConfig": {
-            "type": "object",
-            "properties": {
-                "default_value": {},
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "type": {
-                    "$ref": "#/definitions/github_com_SENERGY-Platform_device-selection_pkg_model.Type"
                 }
             }
         },
@@ -1423,6 +1347,66 @@
                 "shared": {
                     "description": "computed on request, not stored",
                     "type": "boolean"
+                }
+            }
+        },
+        "models.ImportConfig": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "value": {}
+            }
+        },
+        "models.ImportContentVariable": {
+            "type": "object",
+            "properties": {
+                "aspect_id": {
+                    "description": "deprecated: please use AspectIds",
+                    "type": "string"
+                },
+                "aspect_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "characteristic_id": {
+                    "type": "string"
+                },
+                "function_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sub_content_variables": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ImportContentVariable"
+                    }
+                },
+                "type": {
+                    "$ref": "#/definitions/models.Type"
+                },
+                "use_as_tag": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.ImportTypeConfig": {
+            "type": "object",
+            "properties": {
+                "default_value": {},
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "$ref": "#/definitions/models.Type"
                 }
             }
         },
